adds getInitialData class into api

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
   </head>
 
   <body>
-    <div class="header"></div>
-    <div class="main"></div>
-    <div class="footer"></div>
-   
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+
+   <!-- <script src="./index.js" type="module"></script> -->
   </body>
 </html>
